fixed z-index for search layer

--- a/source-bundle/scss/molecules/navigation/search.scss
+++ b/source-bundle/scss/molecules/navigation/search.scss
@@ -12,7 +12,7 @@ $pageSearchFontColor:                $white;
     display:                        none;
     background-color:               $pageSearchBgColor;
     position:                       relative;
-    z-index:                        2;
+    z-index:                        1002;
     left:                           0;
     top:                            auto;
     height:                         auto;
